--- a/index.html
+++ b/index.html
@@ -86,6 +86,6 @@
     </div>
   </body>
   <footer>
-    <p class="text-center"> All right reserved 2023 &copy;Jamuntech</p>
+    <p class="text-center"> All right reserved 2023 &copy; <a href="">Jamuntech</a></p>
   </footer>
 </html>
