--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           illo!
         </h2>
         <img src="./images/temple.jpg" alt="" />
-        <p>
+        <p class="divide-paragraph">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
           distinctio consequuntur ratione eum tempore iusto exercitationem
           suscipit laborum vero fugit doloremque, neque, voluptatum libero.
